--- a/stories.html
+++ b/stories.html
@@ -8,96 +8,13 @@
   <!-- Fonts (match site) -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
-  <style>
-    :root{
-      --bg-deep-1:#0f0f1c;
-      --bg-deep-2:#1b1e35;
-      --bg-hero-2:#2d2b4a;
-      --card:#22253e;
-      --text:#f0f0f0;
-      --text-muted:#cccccc;
-      --text-muted-2:#bbbbbb;
-      --footer-muted:#aaaaaa;
-      --footer-subtle:#555555;
-      --ink-dark:#0f0f1c;
-      --cyan:#0df6e3;
-      --cyan-hover:#0ad3c6;
-      --magenta:#f72585;
-      --purple:#7209b7;
-      --border-dark:#222;
-    }
+  <!-- Global header/footer/vars/buttons/newsletter -->
+  <link rel="stylesheet" href="css/style.css">
 
+  <!-- Page-specific styles only -->
+  <style>
     * { box-sizing: border-box; }
     html { scroll-behavior: smooth; }
-    body {
-      margin: 0;
-      font-family: 'Inter', sans-serif;
-      background: linear-gradient(135deg, var(--bg-deep-1), var(--bg-deep-2));
-      color: var(--text);
-    }
-    h1, h2, h3, nav a, header {
-      font-family: 'Orbitron', sans-serif;
-      line-height: 1.4;
-    }
-    h1 { font-size: 2.8rem; }
-    h2 { font-size: 2.2rem; }
-    h3 { font-size: 1.5rem; }
-
-    /* Header */
-    .site-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background: var(--cyan);
-      color: var(--ink-dark);
-      padding: 1rem 2rem;
-      flex-wrap: wrap;
-    }
-    .logo-title {
-      display: flex;
-      align-items: center;
-      gap: 1rem;
-      text-decoration: none;
-      color: inherit;
-    }
-    .logo-title img { height: 60px; width: auto; }
-    .site-nav { display: flex; gap: 2rem; font-size: 1rem; }
-    .site-nav a {
-      color: var(--ink-dark);
-      text-decoration: none;
-      font-weight: bold;
-      transition: color 0.3s;
-    }
-    .site-nav a:hover { color: var(--magenta); }
-    .hamburger {
-      display: none;
-      flex-direction: column;
-      cursor: pointer;
-      width: 30px;
-      height: 25px;
-      gap: 5px;
-      background: transparent;
-      border: 0;
-      padding: 0;
-    }
-    .hamburger div {
-      background: var(--ink-dark);
-      height: 4px;
-      width: 100%;
-      border-radius: 2px;
-    }
-    @media (max-width: 768px) {
-      .site-nav {
-        flex-direction: column;
-        width: 100%;
-        display: none;
-        background-color: var(--cyan);
-        padding: 1rem 0;
-        margin-top: 1rem;
-      }
-      .site-nav.active { display: flex; }
-      .hamburger { display: flex; }
-    }
 
     /* Intro */
     .page-intro {
@@ -116,6 +33,7 @@
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       margin: 0 0 1rem 0;
+      font-family: 'Orbitron', sans-serif;
     }
     .page-intro p {
       font-size: 1.1rem;
@@ -128,31 +46,7 @@
       gap: 1rem;
       flex-wrap: wrap;
       margin-top: 0.5rem;
-      justify-content: center; /* centered per your request */
-    }
-    .btn {
-      background-color: var(--cyan);
-      border: none;
-      color: var(--ink-dark);
-      padding: 0.75rem 1.25rem;
-      font-weight: bold;
-      font-size: 1rem;
-      border-radius: 4px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-      text-decoration: none;
-      display: inline-block;
-    }
-    .btn:hover { background-color: var(--cyan-hover); }
-    .btn-ghost {
-      background: transparent;
-      border: 1px solid var(--cyan);
-      color: var(--cyan);
-    }
-    .btn-ghost:hover {
-      background: rgba(13,246,227,0.08);
-      border-color: var(--cyan-hover);
-      color: var(--cyan-hover);
+      justify-content: center;
     }
 
     /* Grid (max 4 per row) */
@@ -168,15 +62,10 @@
       border-top: 1px solid var(--border-dark);
       border-bottom: 1px solid var(--border-dark);
     }
-    @media (max-width: 1200px) {
-      .grid { grid-template-columns: repeat(3, 1fr); }
-    }
-    @media (max-width: 900px) {
-      .grid { grid-template-columns: repeat(2, 1fr); }
-    }
-    @media (max-width: 600px) {
-      .grid { grid-template-columns: 1fr; }
-    }
+    @media (max-width: 1200px) { .grid { grid-template-columns: repeat(3, 1fr); } }
+    @media (max-width: 900px)  { .grid { grid-template-columns: repeat(2, 1fr); } }
+    @media (max-width: 600px)  { .grid { grid-template-columns: 1fr; } }
+
     .card {
       background: var(--card);
       border-radius: 12px;
@@ -191,7 +80,7 @@
       border-radius: 8px;
       margin-bottom: 1rem;
     }
-    .card h3 { color: var(--cyan); margin-bottom: 0.5rem; }
+    .card h3 { color: var(--cyan); margin-bottom: 0.5rem; font-family: 'Orbitron', sans-serif; }
     .card p { color: var(--text-muted-2); }
     .card-link { text-decoration: none; color: inherit; display: block; }
     .card-link:hover .card {
@@ -212,60 +101,6 @@
       padding: 1rem 0 0.5rem;
     }
     .is-hidden { display: none !important; }
-
-    /* Footer */
-    footer {
-      background: var(--bg-deep-1);
-      padding: 5rem 2rem 3rem;
-      color: var(--footer-muted);
-      font-size: 0.9rem;
-    }
-    footer a { color: var(--text-muted); text-decoration: none; }
-    footer a:hover { color: var(--cyan); }
-    .footer-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      gap: 3rem;
-      max-width: 1200px;
-      margin: auto;
-    }
-    .footer-column { flex: 1 1 250px; min-width: 200px; }
-    .footer-logo { height: 100px; margin-bottom: 1rem; }
-    .footer-bottom {
-      text-align: center;
-      margin-top: 3rem;
-      border-top: 1px solid var(--border-dark);
-      padding-top: 1rem;
-      color: var(--footer-subtle);
-    }
-
-    /* ✅ Newsletter input/button styles (copied from homepage to match exactly) */
-    .newsletter-input {
-      padding: 0.6rem 1rem;
-      border-radius: 4px;
-      border: 1px solid var(--border-dark);
-      width: 70%;
-      margin-bottom: 0.8rem;
-      background: var(--bg-deep-2);
-      color: var(--text);
-      font-family: 'Inter', sans-serif;
-      font-size: 1rem;
-    }
-    .newsletter-input::placeholder { color: var(--footer-muted); }
-
-    .newsletter-button {
-      padding: 0.6rem 1.2rem;
-      background-color: var(--cyan);
-      color: var(--ink-dark);
-      border: none;
-      border-radius: 4px;
-      font-weight: bold;
-      cursor: pointer;
-      font-family: 'Inter', sans-serif;
-      font-size: 1rem;
-    }
-    .newsletter-button:hover { background: var(--cyan-hover); }
   </style>
 </head>
 <body>
@@ -293,10 +128,10 @@
   <section class="page-intro">
     <div class="intro-inner">
       <h1 class="gradient-heading">Featured Fiction</h1>
-      <p><strong>Editor-selected cyberpunk short fiction</strong> from across Burnline.This page features standout stories in one place so that you can read them in-browser instead of via digital flipbook, if you'd like.</p>
+      <p><strong>Editor-selected cyberpunk short fiction</strong> from across Burnline. This page features standout stories in one place so that you can read them in-browser instead of via digital flipbook, if you'd like.</p>
       <div class="intro-actions">
         <a class="btn" href="submit.html">Submit Your Story</a>
-        <a class="btn btn-ghost" href="fiction.html">Browse All Issues</a>
+        <a class="btn secondary" href="fiction.html">Browse All Issues</a>
       </div>
     </div>
   </section>
@@ -395,11 +230,11 @@
         </form>
       </div>
       <div class="footer-column">
-        <h4 style="color: var(--cyan);">Get In Touch</h4>
+        <h4>Get In Touch</h4>
         <p>contact@burnline.net<br><span style="font-size: 0.8rem;">(no story submissions by email)</span></p>
       </div>
       <div class="footer-column">
-        <h4 style="color: var(--cyan);">Read</h4>
+        <h4>Read</h4>
         <p><a href="fiction.html">Issue 01</a></p>
         <p><a href="fiction.html">Issue 02</a></p>
         <p><a href="fiction.html">Issue 03</a></p>
