--- a/art.html
+++ b/art.html
@@ -4,75 +4,30 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Art – Burnline</title>
+
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Inter:wght@400;600&display=swap" rel="stylesheet">
+
+  <!-- Global header/footer/vars/buttons/newsletter -->
+  <link rel="stylesheet" href="css/style.css">
+
+  <!-- Page-specific styles only -->
   <style>
-    body {
-      margin: 0;
-      font-family: 'Inter', sans-serif;
-      background: linear-gradient(135deg, #0f0f1c, #1b1e35);
-      color: #f0f0f0;
-    }
-
     html { scroll-behavior: smooth; }
-
-    h1, h2, h3, h4, nav a, header { font-family: 'Orbitron', sans-serif; }
-
-    .site-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background: #0df6e3;
-      color: #0f0f1c;
-      padding: 1rem 2rem;
-      flex-wrap: wrap;
-      position: relative;
-    }
-
-    .logo-title { display: flex; align-items: center; gap: 1rem; text-decoration: none; color: inherit; }
-    .logo-title img { height: 60px; width: auto; }
-
-    .site-nav { display: flex; gap: 2rem; font-size: 1rem; }
-    .site-nav a { color: #0f0f1c; text-decoration: none; font-weight: bold; transition: color 0.3s; }
-    .site-nav a:hover { color: #ff4ac2; }
-
-    .hamburger { display: none; flex-direction: column; justify-content: center; cursor: pointer; width: 30px; height: 25px; gap: 5px; }
-    .hamburger div { background: #0f0f1c; height: 4px; width: 100%; border-radius: 2px; }
-
-    @media (max-width: 768px){
-      .site-nav{
-        flex-direction: column; width: 100%; display: none; background: #0df6e3;
-        padding: 1rem 0; margin-top: 1rem;
-      }
-      .site-nav.active{ display: flex; }
-      .hamburger{ display: flex; }
-    }
 
     /* Containers */
     .container { max-width: 1100px; margin: 0 auto; padding: 0 2rem; }
 
-    /* Hero/subheading (first) */
+    /* Hero/subheading */
     .content { max-width: 800px; margin: 3rem auto; padding: 0 2rem; text-align: center; }
-    .gradient-heading {
-      font-size: 2rem;
-      background: linear-gradient(90deg, #f72585, #7209b7);
-      -webkit-background-clip: text; -webkit-text-fill-color: transparent;
-      margin-bottom: 1rem;
-    }
-    .gradient-heading-blue {
-      font-size: 1.5rem;
-      background: linear-gradient(90deg, #0df6e3, #1e90ff);
-      -webkit-background-clip: text; -webkit-text-fill-color: transparent;
-      margin-bottom: 1rem;
-    }
-    .content p { line-height: 1.7; color: #ccc; margin-bottom: 1.2rem; }
 
     /* Cover Gallery */
     .cover-galley {
       padding: 2rem 0 1rem;
       max-width: 1100px;
       margin: 0 auto;
-      padding-left: 1rem;   /* spacing on mobile */
-      padding-right: 1rem;  /* spacing on mobile */
+      padding-left: 1rem;
+      padding-right: 1rem;
     }
     .cover-grid {
       display: grid;
@@ -94,7 +49,7 @@
     }
 
     /* Artwork grid */
-    .section-heading { text-align: left; margin-top: 2.5rem; } /* left align per request */
+    .section-heading { text-align: left; margin-top: 2.5rem; }
     .gallery-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
@@ -112,25 +67,12 @@
     .art-tile img {
       width: 100%;
       height: 300px;
-      object-fit: cover; /* uniform thumbnails for issue art */
+      object-fit: cover;
       display: block;
     }
 
-    /* Load More button */
+    /* Load More */
     .load-more-wrap { text-align: center; padding: 0 0 3rem; }
-    .btn {
-      appearance: none;
-      border: none;
-      border-radius: 8px;
-      padding: 0.75rem 1.25rem;
-      font-weight: 700;
-      cursor: pointer;
-      background: #0df6e3;
-      color: #0f0f1c;
-      transition: transform 0.15s ease, box-shadow 0.15s ease, opacity 0.15s ease;
-    }
-    .btn:hover { transform: translateY(-1px); box-shadow: 0 6px 20px rgba(13,246,227,0.25); }
-    .btn:active { transform: translateY(0); box-shadow: none; }
     .hidden { display: none !important; }
 
     /* Modal */
@@ -146,38 +88,32 @@
       background: #0b0c17; object-fit: contain;
     }
     .close {
-      position: absolute; top: 20px; right: 35px; color: #0df6e3;
+      position: absolute; top: 20px; right: 35px; color: var(--cyan);
       font-size: 40px; font-weight: bold; cursor: pointer;
     }
     .modal-caption { color: #ccc; margin-top: 1rem; text-align: center; max-width: 80%; }
-    .modal-caption h3 { margin: 0; color: #0df6e3; }
+    .modal-caption h3 { margin: 0; color: var(--cyan); }
     .modal-caption p { margin: 0.5rem 0 0; }
 
     .nav-arrow {
       position: absolute; top: 50%; transform: translateY(-50%); font-size: 3rem;
-      color: #0df6e3; background: none; border: none; cursor: pointer; z-index: 1000;
+      color: var(--cyan); background: none; border: none; cursor: pointer; z-index: 1000;
     }
     .nav-arrow.left { left: 2%; } .nav-arrow.right { right: 2%; }
 
-    /* Footer */
-    footer { background: #0f0f1c; padding: 4rem 2rem 2rem; color: #aaa; font-size: 0.9rem; }
-    footer a:hover { color: #0df6e3; }
-    .footer-container { display: flex; flex-wrap: wrap; justify-content: space-between; gap: 3rem; max-width: 1200px; margin: auto; }
-    .footer-column { flex: 1 1 250px; min-width: 200px; }
-    .footer-logo { height: 100px; margin-bottom: 1rem; }
-    .footer-bottom { text-align: center; margin-top: 3rem; border-top: 1px solid #222; padding-top: 1rem; color: #555; }
-    .newsletter-input { padding: 0.6rem 1rem; border-radius: 4px; border: none; width: 70%; margin-bottom: 0.8rem; }
-    .newsletter-button { padding: 0.6rem 1.2rem; background-color: #0df6e3; color: #0f0f1c; border: none; border-radius: 4px; font-weight: bold; cursor: pointer; }
-
+    /* Inline gradient link utility (kept for this page only) */
     .gradient-blue-text {
-      background: linear-gradient(90deg, #0df6e3, #56ccf2);
+      background: linear-gradient(90deg, var(--cyan), #56ccf2);
       -webkit-background-clip: text; -webkit-text-fill-color: transparent;
       background-clip: text; color: transparent; font-weight: bold;
+      text-decoration: none;
     }
+    .gradient-blue-text:hover { opacity: .9; }
   </style>
 </head>
 <body>
 
+  <!-- Header (from global CSS) -->
   <header class="site-header">
     <a href="index.html" class="logo-title">
       <img src="Flame logo-1.png.png" alt="Burnline logo">
@@ -221,7 +157,7 @@
     </div>
   </section>
 
-  <!-- Issue Art (formerly "More Art From Burnline") -->
+  <!-- Issue Art -->
   <section class="container">
     <div class="section-heading">
       <h2 class="gradient-heading-blue">Issue Art</h2>
@@ -276,26 +212,26 @@
     </div>
   </div>
 
+  <!-- Footer (from global CSS) -->
   <footer>
     <div class="footer-container">
       <div class="footer-column">
         <img src="Flame logo-1.png.png" alt="Burnline Logo" class="footer-logo">
         <p style="line-height: 1.6;">Sign up to our newsletter to get the latest stories, art, and neon-lit news from Burnline.</p>
         <form style="margin-top: 1rem;">
-          <input type="email" placeholder="Email Address" class="newsletter-input">
-          <br>
+          <input type="email" placeholder="Email Address" class="newsletter-input"><br>
           <button type="submit" class="newsletter-button">Subscribe</button>
         </form>
       </div>
       <div class="footer-column">
-        <h4 style="color: #0df6e3;">Get In Touch</h4>
+        <h4>Get In Touch</h4>
         <p>contact@burnline.net<br><span style="font-size: 0.8rem;">(no story submissions by email)</span></p>
       </div>
       <div class="footer-column">
-        <h4 style="color: #0df6e3;">Read</h4>
-        <p><a href="#" style="color: #ccc; text-decoration: none;">Neon Dystopia</a></p>
-        <p><a href="#" style="color: #ccc; text-decoration: none;">Future//Tense</a></p>
-        <p><a href="#" style="color: #ccc; text-decoration: none;">HackDust</a></p>
+        <h4>Read</h4>
+        <p><a href="#">Neon Dystopia</a></p>
+        <p><a href="#">Future//Tense</a></p>
+        <p><a href="#">HackDust</a></p>
       </div>
     </div>
     <div class="footer-bottom">
@@ -377,7 +313,7 @@
         const hiddenItems = document.querySelectorAll('#issueArtGrid .art-tile.hidden');
         hiddenItems.forEach(el => el.classList.remove('hidden'));
         loadMoreBtn.classList.add('hidden');
-        buildTilesAndBindClicks(); // rebuild so modal includes newly visible items
+        buildTilesAndBindClicks(); // include newly visible items in modal navigation
       });
     }
 
