--- a/art.html
+++ b/art.html
@@ -217,7 +217,7 @@
     <div class="footer-container">
       <div class="footer-column">
         <img src="Flame logo-1.png.png" alt="Burnline Logo" class="footer-logo">
-        <p style="line-height: 1.6;">Sign up to our newsletter to get the latest stories, art, and neon-lit news from Burnline.</p>
+        <p>Get issue updates from Burnline straight to your inbox. No spam or anything, I promise.</p>
         <form style="margin-top: 1rem;">
           <input type="email" placeholder="Email Address" class="newsletter-input"><br>
           <button type="submit" class="newsletter-button">Subscribe</button>
@@ -225,13 +225,13 @@
       </div>
       <div class="footer-column">
         <h4>Get In Touch</h4>
-        <p>contact@burnline.net<br><span style="font-size: 0.8rem;">(no story submissions by email)</span></p>
+        <p>contact@burnlinemag.com<br><span style="font-size: 0.8rem;"></span></p>
       </div>
       <div class="footer-column">
         <h4>Read</h4>
-        <p><a href="#">Neon Dystopia</a></p>
-        <p><a href="#">Future//Tense</a></p>
-        <p><a href="#">HackDust</a></p>
+        <p><a href="https://bowliopia.github.io/burnline/fiction.html">Issue Library</a></p>
+        <p><a href="https://bowliopia.github.io/burnline/stories.html">Featured Stories</a></p>
+        <p><a href="https://bowliopia.github.io/burnline/staffpicks.html">Staff Picks</a></p>
       </div>
     </div>
     <div class="footer-bottom">
