--- a/about.html
+++ b/about.html
@@ -51,9 +51,9 @@
 
   <section class="content">
     <h1 class="gradient-heading">About Burnline</h1>
-    <p>Burnline is a digital magazine run by a team of 1 (me) who's trying his best to make a hub for some good cyberpunk fiction and artwork. I made this because was looking for short fiction in the subgenre to read but couldn't find a ton of it. Surely it's out there, right? Hopefully Burnline can be a good landing place for that sort of thing.</p>
-    <p>I hope to publish stories and art that reflect what you picture when you think cyberpunk. Feel like the real world is folding in on itself? Me too. Let's make some art about it.</p>
-    <p>This website and all magazine issues are currently and always will be 100% ad free because I hate digital ads. You should be able to just read something without being bothered. As a result, I may charge a small fee for future editions so that I can pay the writers/artists whose work I publish. For the meantime, the magazine is free, because free is good.</p>
+    <p>Burnline is a digital magazine run mostly by a team of 1 (with a little help here and there) who's trying to make a hub for some good cyberpunk fiction and artwork. We made this because we were looking for short fiction in the subgenre to read but couldn't find a ton of it. Surely it's out there, right? Hopefully Burnline can be a good landing place for that sort of thing.</p>
+    <p>We hope to publish stories and art that reflect what you picture when you think cyberpunk. Feel like the real world is folding in on itself? Us too. Let's make some art about it.</p>
+    <p>This website and all magazine issues are currently, and always will be, 100% ad free because we hate digital ads. You should be able to just read something without being bothered. As a result, we may charge a small fee for future editions so that we can pay the writers/artists whose work I publish. For the meantime, the magazine is free, because free is good.</p>
     <p>If you’d like to submit, collaborate, or just say hi, head over to the <a href="submit.html" class="gradient-blue-text">Submit page</a> or reach out at <a href="mailto:contact@burnlinemag.com" class="gradient-pink-text">contact@burnlinemag.com</a>. If there's anything Burnline's site/magazine doesn't show that you think belongs here, this editor would love to hear about it.</p>
   </section>
 
@@ -61,7 +61,7 @@
     <div class="footer-container">
       <div class="footer-column">
         <img src="Flame logo-1.png.png" alt="Burnline Logo" class="footer-logo">
-        <p>Get issue updates from Burnline straight to your inbox. No spam or anything, I promise.</p>
+        <p>Get issue updates from Burnline straight to your inbox. No spam or anything, we promise.</p>
         <form style="margin-top: 1rem;">
           <input type="email" placeholder="Email Address" class="newsletter-input"><br>
           <button type="submit" class="newsletter-button">Subscribe</button>
