--- a/submit.html
+++ b/submit.html
@@ -69,7 +69,7 @@
     <!-- Fiction Guidelines Section -->
     <div id="fiction" style="text-align: left;">
       <h2 id="fiction" class="gradient-heading-blue" style="margin-top: 3rem;">Fiction Guidelines</h2>
-      <p>We’re excited about cyberpunk in all its forms—classic and modern, urban and off-world, sleek and gritty. In fiction, we're looking for what you'd expect; near-future worlds with corporate control, people altered by tech-implants, you get it. <strong>Above all however, we care about character.</strong> We want people who make us feel something while they're navigating whatever wild setting you’ve built. Human connection is what makes good cyberpunk work. If the content moves us, we’ll usually publish it.</p>
+      <p>We’re excited about cyberpunk in all its forms—classic and modern, urban and off-world, sleek and gritty. In fiction, we're looking for what you'd expect; near-future worlds with corporate control, people altered by tech-implants, you get it. <strong>Above all however, we care about character.</strong> We want people who make us feel something while they're navigating whatever wild setting you’ve built.</p>
       <p style="margin-top: -0.5rem;">We're less interested in anything outside of the cyberpunk subgenre for this magazine. If you're submitting, please make sure you'd classify your work as cyberpunk specifically.</p>
 
       <!-- Info Table -->
@@ -80,7 +80,7 @@
         </tr>
         <tr style="background-color: var(--bg-deep-2);">
           <td style="padding: 0.5rem; font-weight: bold; vertical-align: top;">Pay Rate</td>
-          <td style="padding: 0.5rem;">$50 USD per accepted piece. It’s our goal to eventually pay a competitive per-word rate, but we’re not quite there yet.</td>
+          <td style="padding: 0.5rem;">Because this is a free magazine without ads, we can't offer any payment at this time. It’s our goal to eventually pay a competitive per-word rate, but we’re not quite there yet. We get it if that's a non-starter for you.</td>
         </tr>
         <tr>
           <td style="padding: 0.5rem; font-weight: bold; vertical-align: top;">How to Submit</td>
@@ -96,8 +96,9 @@
       <h2 id="art" class="gradient-heading-blue" style="margin-top: 4rem;">Art Guidelines</h2>
       <p>We’re accepting cyberpunk-themed visual art for digital publication. This includes illustration, digital collage, photography, animation stills, glitch art, or anything else that fits the tone of Burnline. We care more about the vibe than the medium.</p>
 
-      <p><strong>How to Submit:</strong> Email <a href="mailto:contact@burnline.net" style="color: var(--cyan);">contact@burnline.net</a> with your artwork attached (JPG or PNG) or linked via portfolio or file share. Please include the word <strong>"Submission"</strong> in the subject line.</p>
+      <p><strong>How to Submit:</strong> Email <a href="mailto:contact@burnlinemag.com" style="color: var(--cyan);">contact@burnline.net</a> with your artwork attached (JPG or PNG) or linked via portfolio or file share. Please include the word <strong>"Submission"</strong> in the subject line.</p>
 
+      <p>Please feel free to submit your work to any other publications while you're waiting to hear back from us. If we take a while to respond, we haven't forgotten your work, we're just moving through the backlog. Thanks for your patience.</p>
       <p><strong>No AI-generated or AI-assisted work will be accepted.</strong></p>
     </div>
 
