--- a/submit.html
+++ b/submit.html
@@ -84,26 +84,27 @@
         </tr>
         <tr>
           <td style="padding: 0.5rem; font-weight: bold; vertical-align: top;">How to Submit</td>
-          <td style="padding: 0.5rem;">Email your story as a .doc, .docx, or .pdf to <a href="mailto:contact@burnline.net" style="color: var(--cyan);">contact@burnline.net</a>. Please include the word <strong>"Submission"</strong> in the subject line.</td>
+          <td style="padding: 0.5rem;">Email your story as a .doc, .docx, or .pdf to <a href="mailto:contact@burnlinemag.com" style="color: var(--cyan);">contact@burnline.net</a>. Please include the word <strong>"Submission"</strong> in the subject line.</td>
         </tr>
       </table>
 
       <p style="margin-top: 1.5rem;"><strong>No AI-generated or AI-assisted work will be accepted.</strong> We only want human-created fiction. There's irony somewhere in here.</p>
+            <p>Please feel free to submit your work to any other publications while you're waiting to hear back from us. If we take a while to respond, we haven't forgotten your work, we're just moving through the backlog. Thanks for your patience.</p>
+      <p><strong>No AI-generated or AI-assisted work will be accepted.</strong></p>
+    </div>
     </div>
 
     <!-- Art Guidelines Section -->
     <div id="art" style="text-align: left;">
       <h2 id="art" class="gradient-heading-blue" style="margin-top: 4rem;">Art Guidelines</h2>
-      <p>We’re accepting cyberpunk-themed visual art for digital publication. This includes illustration, digital collage, photography, animation stills, glitch art, or anything else that fits the tone of Burnline. We care more about the vibe than the medium.</p>
+      <p>We’re accepting cyberpunk-themed visual art for digital publication. This includes anything visual—designed, hand drawn, or other—that looks cool and could be classified as cyberpunk. We care more about the look than the medium.</p>
 
-      <p><strong>How to Submit:</strong> Email <a href="mailto:contact@burnlinemag.com" style="color: var(--cyan);">contact@burnline.net</a> with your artwork attached (JPG or PNG) or linked via portfolio or file share. Please include the word <strong>"Submission"</strong> in the subject line.</p>
-
-      <p>Please feel free to submit your work to any other publications while you're waiting to hear back from us. If we take a while to respond, we haven't forgotten your work, we're just moving through the backlog. Thanks for your patience.</p>
+      <p><strong>How to Submit:</strong> Email <a href="mailto:contact@burnlinemag.com" style="color: var(--cyan);">contact@burnline.net</a> with a link to your artwork wherever it's hosted (online portfolio, Reddit post, whatever). Please include the word <strong>"Submission"</strong> in the subject line.</p>
       <p><strong>No AI-generated or AI-assisted work will be accepted.</strong></p>
     </div>
 
     <div style="text-align: left; margin-top: 3rem;">
-      <h3>A Note on Cover Letters</h3>
+      <h3>Cover Letters</h3>
       <p>Emails and cover letters are <em>much less important</em> to us than your fiction or artwork. If a part of your personal story contributes to what you've made, we’d love to hear about it—but otherwise, keep it simple. We're here for the work itself.</p>
     </div>
   </section>
@@ -112,7 +113,7 @@
     <div class="footer-container">
       <div class="footer-column">
         <img src="Flame logo-1.png.png" alt="Burnline Logo" class="footer-logo">
-        <p>Get issue updates from Burnline straight to your inbox. No spam or anything, I promise.</p>
+        <p>Get issue updates from Burnline straight to your inbox. No spam or anything, we promise.</p>
         <form style="margin-top: 1rem;">
           <input type="email" placeholder="Email Address" class="newsletter-input"><br>
           <button type="submit" class="newsletter-button">Subscribe</button>
