--- a/submit.html
+++ b/submit.html
@@ -89,7 +89,7 @@
       </table>
 
       <p style="margin-top: 1.5rem;"><strong>No AI-generated or AI-assisted work will be accepted.</strong> We only want human-created fiction. There's irony somewhere in here.</p>
-            <p>Please feel free to submit your work to any other publications while you're waiting to hear back from us. If we take a while to respond, we haven't forgotten your work, we're just moving through the backlog. Thanks for your patience.</p>
+            <p>Please feel free to submit your work to any other publications while you're waiting to hear back from us—just let us know if it gets picked up. If we take a while to respond, we haven't forgotten your work, we're just moving through the backlog. Thanks for your patience.</p>
       <p><strong>No AI-generated or AI-assisted work will be accepted.</strong></p>
     </div>
     </div>
