--- a/submit.html
+++ b/submit.html
@@ -84,7 +84,7 @@
         </tr>
         <tr>
           <td style="padding: 0.5rem; font-weight: bold; vertical-align: top;">How to Submit</td>
-          <td style="padding: 0.5rem;">Email your story as a .doc, .docx, or .pdf to <a href="mailto:contact@burnlinemag.com" style="color: var(--cyan);">contact@burnline.net</a>. Please include the word <strong>"Submission"</strong> in the subject line.</td>
+          <td style="padding: 0.5rem;">Email your story as a .doc, .docx, or .pdf to <a href="mailto:contact@burnlinemag.com" style="color: var(--cyan);">contact@burnlinemag.com</a>. Please include the word <strong>"Submission"</strong> in the subject line.</td>
         </tr>
       </table>
 
@@ -98,8 +98,9 @@
     <div id="art" style="text-align: left;">
       <h2 id="art" class="gradient-heading-blue" style="margin-top: 4rem;">Art Guidelines</h2>
       <p>We’re accepting cyberpunk-themed visual art for digital publication. This includes anything visual—designed, hand drawn, or other—that looks cool and could be classified as cyberpunk. We care more about the look than the medium.</p>
+       <p> If selected, your artwork will be added to the digital issue of the magazine and included on our Art page. You'll be fully credited on the magazine and site, including whatever name and profile/social handles you'd like to include. </p></p>
 
-      <p><strong>How to Submit:</strong> Email <a href="mailto:contact@burnlinemag.com" style="color: var(--cyan);">contact@burnline.net</a> with a link to your artwork wherever it's hosted (online portfolio, Reddit post, whatever). Please include the word <strong>"Submission"</strong> in the subject line.</p>
+      <p><strong>How to Submit:</strong> Email <a href="mailto:contact@burnlinemag.com" style="color: var(--cyan);">contact@burnlinemag.com</a> with a link to your artwork wherever it's hosted (online portfolio, Reddit post, whatever). Please include the word <strong>"Submission"</strong> in the subject line.</p>
       <p><strong>No AI-generated or AI-assisted work will be accepted.</strong></p>
     </div>
 
