--- a/art.html
+++ b/art.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -10,106 +10,6 @@
 
   <!-- Global header/footer/vars/buttons/newsletter -->
   <link rel="stylesheet" href="css/style.css">
-
-  <!-- Page-specific styles only -->
-  <style>
-    html { scroll-behavior: smooth; }
-
-    /* Containers */
-    .container { max-width: 1100px; margin: 0 auto; padding: 0 2rem; }
-
-    /* Hero/subheading */
-    .content { max-width: 800px; margin: 3rem auto; padding: 0 2rem; text-align: center; }
-
-    /* Cover Gallery */
-    .cover-galley {
-      padding: 2rem 0 1rem;
-      max-width: 1100px;
-      margin: 0 auto;
-      padding-left: 1rem;
-      padding-right: 1rem;
-    }
-    .cover-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 2rem;
-      margin-top: 1.25rem;
-    }
-    .cover-tile {
-      cursor: pointer;
-      transition: transform 0.25s ease;
-    }
-    .cover-tile:hover { transform: scale(1.02); }
-    .cover-tile img {
-      width: 100%;
-      height: auto;
-      display: block;
-      border-radius: 8px;
-      object-fit: contain; /* show full image */
-    }
-
-    /* Artwork grid */
-    .section-heading { text-align: left; margin-top: 2.5rem; }
-    .gallery-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 2rem;
-      padding: 2rem 0 1rem;
-    }
-    .art-tile {
-      background: #1a1c30;
-      border-radius: 10px;
-      overflow: hidden;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      cursor: pointer;
-    }
-    .art-tile:hover { transform: scale(1.02); box-shadow: 0 0 25px rgba(13, 246, 227, 0.15); }
-    .art-tile img {
-      width: 100%;
-      height: 300px;
-      object-fit: cover;
-      display: block;
-    }
-
-    /* Load More */
-    .load-more-wrap { text-align: center; padding: 0 0 3rem; }
-    .hidden { display: none !important; }
-
-    /* Modal */
-    .modal {
-      display: flex; align-items: center; justify-content: center; flex-direction: column;
-      opacity: 0; visibility: hidden; position: fixed; z-index: 999; left: 0; top: 0; width: 100%; height: 100%;
-      background-color: rgba(0, 0, 0, 0.9); transition: opacity 0.4s ease;
-    }
-    .modal.show { opacity: 1; visibility: visible; }
-    .modal-content {
-      max-width: 90%; max-height: 80vh; border-radius: 10px;
-      box-shadow: 0 0 30px rgba(13, 246, 227, 0.2);
-      background: #0b0c17; object-fit: contain;
-    }
-    .close {
-      position: absolute; top: 20px; right: 35px; color: var(--cyan);
-      font-size: 40px; font-weight: bold; cursor: pointer;
-    }
-    .modal-caption { color: #ccc; margin-top: 1rem; text-align: center; max-width: 80%; }
-    .modal-caption h3 { margin: 0; color: var(--cyan); }
-    .modal-caption p { margin: 0.5rem 0 0; }
-
-    .nav-arrow {
-      position: absolute; top: 50%; transform: translateY(-50%); font-size: 3rem;
-      color: var(--cyan); background: none; border: none; cursor: pointer; z-index: 1000;
-    }
-    .nav-arrow.left { left: 2%; } .nav-arrow.right { right: 2%; }
-
-    /* Inline gradient link utility (kept for this page only) */
-    .gradient-blue-text {
-      background: linear-gradient(90deg, var(--cyan), #56ccf2);
-      -webkit-background-clip: text; -webkit-text-fill-color: transparent;
-      background-clip: text; color: transparent; font-weight: bold;
-      text-decoration: none;
-    }
-    .gradient-blue-text:hover { opacity: .9; }
-  </style>
 </head>
 <body>
 
@@ -132,17 +32,17 @@
 
   <!-- Featured Art blurb -->
   <section class="content">
-    <h1 class="gradient-heading">Featured Art</h1>
+    <h1>Featured Art</h1>
     <p>
       Interested in having your art featured in the next issue?
-      <a href="submit.html" class="gradient-blue-text">Visit our Submit page.</a>
+      <a href="submit.html">Visit our Submit page.</a>
     </p>
   </section>
 
   <!-- Cover Gallery -->
   <section class="cover-galley">
     <div class="container">
-      <h2 class="gradient-heading-blue" style="text-align:left;">Cover Gallery</h2>
+      <h2>Cover Gallery</h2>
       <div class="cover-grid">
         <div class="cover-tile" data-title="Burnline — Issue 01" data-artist="Burnline Editorial">
           <img src="Burnline Issue 01.png" alt="Burnline Issue 01 cover">
@@ -160,7 +60,7 @@
   <!-- Issue Art -->
   <section class="container">
     <div class="section-heading">
-      <h2 class="gradient-heading-blue">Issue Art</h2>
+      <h2>Issue Art</h2>
     </div>
     <div class="gallery-grid" id="issueArtGrid">
       <!-- Ensure data attributes for captions -->
@@ -218,14 +118,14 @@
       <div class="footer-column">
         <img src="Flame logo-1.png.png" alt="Burnline Logo" class="footer-logo">
         <p>Get issue updates from Burnline straight to your inbox. No spam or anything, I promise.</p>
-        <form style="margin-top: 1rem;">
+        <form>
           <input type="email" placeholder="Email Address" class="newsletter-input"><br>
           <button type="submit" class="newsletter-button">Subscribe</button>
         </form>
       </div>
       <div class="footer-column">
         <h4>Get In Touch</h4>
-        <p>contact@burnlinemag.com<br><span style="font-size: 0.8rem;"></span></p>
+        <p>contact@burnlinemag.com<br><span></span></p>
       </div>
       <div class="footer-column">
         <h4>Read</h4>
