--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
   </header>
 
   <section class="content">
-    <h1 class="gradient-heading">About Burnline</h1>
+<h1>About Burnline</h1>
     <p>Burnline is a digital magazine run mostly by a team of 1 (with a little help here and there) who's trying to make a hub for some good cyberpunk fiction and artwork. We made this because we were looking for short fiction in the subgenre to read but couldn't find a ton of it. Surely it's out there, right? Hopefully Burnline can be a good landing place for that sort of thing.</p>
     <p>We hope to publish stories and art that reflect what you picture when you think cyberpunk. Feel like the real world is folding in on itself? Us too. Let's make some art about it.</p>
     <p>This website and all magazine issues are currently, and always will be, 100% ad free because we hate digital ads. You should be able to just read something without being bothered. As a result, we may charge a small fee for future editions so that we can pay the writers/artists whose work I publish. For the meantime, the magazine is free, because free is good.</p>
